--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@heroicons/react": "^2.2.0",
 		"next": "15.1.6",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0"
