--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"dependencies": {
 		"@heroicons/react": "^2.2.0",
 		"ky": "^1.7.4",
+		"motion": "^12.4.2",
 		"next": "15.1.6",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0"
