--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@headlessui/react": "^2.2.4",
 		"@heroicons/react": "^2.2.0",
 		"ky": "^1.7.4",
 		"motion": "^12.4.2",
