--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 		"motion": "^12.4.2",
 		"next": "^15.3.4",
 		"nextjs-toploader": "^3.8.16",
+		"prettier": "^3.6.2",
 		"react": "^19.0.0",
 		"react-chartjs-2": "^5.3.0",
 		"react-dom": "^19.0.0",
