--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 	"dependencies": {
 		"@headlessui/react": "^2.2.4",
 		"@heroicons/react": "^2.2.0",
+		"@hookform/resolvers": "^5.2.1",
 		"chart.js": "^4.4.9",
 		"ky": "^1.7.4",
 		"motion": "^12.4.2",
@@ -20,6 +21,7 @@
 		"react-chartjs-2": "^5.3.0",
 		"react-dom": "^19.0.0",
 		"react-hook-form": "^7.57.0",
+		"zod": "^4.0.17",
 		"zustand": "^5.0.3"
 	},
 	"devDependencies": {
